service-gitlab.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitlab-service
spec:
  type: ClusterIP
  #type: NodePort
  selector:
    app: gitlab
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    #nodePort: 30080
