service-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: s1
spec:
  type: ClusterIP
  selector:
    app: nginx-deployment
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
