service-registry.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry-service
spec:
 #type: ClusterIP
  type: NodePort
  selector:
    app: registry-deployment
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
    nodePort: 31111
