ingress-nginx.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: foo.bar.com
    http:
      paths:
      - path: /phpmyadmin
        backend:
          serviceName: phpmyadmin-service
          servicePort: 80
      - path: /gitlab
        backend:
          serviceName: gitlab-service
          servicePort: 80
      - path: /
        backend:
          serviceName: nginx
          servicePort: 80  
  - host: bar.foo.com
    http:
      paths:
      - backend:
          serviceName: s2
          servicePort: 80
